tests/fixtures/invalid/pow_none_bool_int.py
# Cannot call pow() with None, Bool, Int
x = pow(None, True, 1)
